--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,50 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+html, body {
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: darkslategray;
+  background: #efe6e6;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
+/* Headers */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+/* Buttons */
+
+
+/* Navbar */
+.navbar {
+  background: darkslategray;
+  color: #efe6e6;
+  padding: 1rem;
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.navlinks {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.navlinks a {
+  text-decoration: none;
+  color: #efe6e6;
+  padding: 0.5rem;
 }
+
+/* Footer */
+
+
+/* Home */
+
+
+/* About */
+
+
