--- a/src/App.css
+++ b/src/App.css
@@ -13,7 +13,7 @@ html, body {
 .container {
   width: 90%;
   margin: auto;
-
+  margin-bottom: 2rem;
 }
 
 /* Headers */
@@ -73,7 +73,35 @@ h1 {
 }
 
 /* Home */
+.home-choice {
+  margin-top: 2rem;
+  padding: 2rem;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
 
+.choice {
+  background: #7802533b;
+  border: 1px solid #780253;
+  border-radius: 8px;
+  padding: 2rem;
+  cursor: pointer;
+  width: 40%;
+}
+
+.choice:hover {
+  background: #ed92d280;
+}
+
+.choice-image img {
+  border-radius: 8px;
+  width: 100%;
+}
+
+.choice-title {
+  text-align: center;
+}
 
 /* Videos */
 .video-content {
@@ -104,6 +132,36 @@ h1 {
   border: none;
 }
 
+/* Daycare */
+.daycare-image {
+  width: 60%;
+  margin: auto;
+}
+.daycare-image img {
+  width: 100%;
+  border-radius: 8px;
+}
+
+.daycare-content {
+  width: 80%;
+  margin: auto;
+  margin-bottom: 2rem;
+}
+
+.price-title {
+  text-align: center;
+  margin-bottom: 1rem;
+}
+
+.prices {
+  display: flex;
+  justify-content: space-around;
+}
+
+.price-list {
+  list-style: none;
+}
+
 /* About */
 
 
@@ -114,6 +172,10 @@ h1 {
 @media only screen and (min-width: 992px) {
   .container {
     width: 80%;
+    padding-bottom: 3rem;
+  }
+  .content {
+    padding: 1rem;
   }
   
 
