--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,8 @@ html, body {
   margin-bottom: 2rem;
 }
 
+
+
 /* Headers */
 h1 {
   margin-top: 1rem;
@@ -28,7 +30,25 @@ h4 {
   margin-bottom: 0.5rem;
 }
 
+
+
 /* Buttons */
+.btn {
+  padding: 0.5rem 1rem;
+  border: 1px solid #5a025a;
+  background: #740074;
+  color: #efe6e6;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: 500;
+  cursor: pointer;
+}
+
+.btn:hover {
+  background: #5a025a;
+  color: #fff;
+}
+
 
 
 /* Navbar */
@@ -266,9 +286,77 @@ h4 {
 
 
 /* Connect */
+.connect-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
 
+.form-container {
+  display: flex;
+  justify-content: center;
+  padding: 4rem 3rem;
+}
 
+.form-item {
+  margin-bottom: 1.2rem;
+}
 
+.form-item input,
+.form-item label {
+  display: block;
+}
+
+.form-item label {
+  margin-bottom: 0.5rem;
+  text-align: center;
+}
+
+.form-item input,
+.form-item textarea {
+  width: 20rem;
+  font-size: 1rem;
+  color: #740074;
+  padding: 0.5rem;
+  border: 1px solid transparent;
+  border-radius: 8px;
+  background: #f9f9fb;
+  box-shadow: 1px 1px 5px #2a002a63;
+}
+
+.form-item input:focus,
+.form-item textarea:focus {
+  outline: none;
+}
+
+.btn-center {
+  display: flex;
+  justify-content: center;
+}
+
+.connect-details {
+  display: block;
+  justify-content: center;
+  padding: 3rem;
+}
+
+.connect-items {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.connect-item a {
+  text-decoration: none;
+  color: #740074;
+}
+
+.connect-map {
+  border: 1px solid transparent;
+  border-radius: 8px;
+  box-shadow: 1px 1px 5px #2a002a63;
+  margin-bottom: 1rem;
+}
 
 
 @media only screen and (min-width: 768px) {
