--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -336,33 +336,33 @@ p {
 
 /* Videos */
 .video-content {
-  padding: 3rem 2rem;
-}
+  padding: 0.5rem 2rem;
 
-.video-section {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  margin-top: 1rem;
-}
+  .video-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 1rem;
 
-.youtube-video-container {
-  margin-bottom: 0.5rem;
-  position: relative;
-  width: 100%;
-  overflow: hidden;
-  padding-top: 56.25%;
-}
+    .youtube-video-container {
+      margin-bottom: 0.5rem;
+      position: relative;
+      width: 100%;
+      overflow: hidden;
+      padding-top: 56.25%;
 
-.youtube-video {
-  position: absolute;
-  top: 0;
-  left: 0;
-  bottom: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+      .youtube-video {
+        position: absolute;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        right: 0;
+        width: 100%;
+        height: 100%;
+        border: none;
+      }
+    }
+  }
 }
 
 
@@ -646,6 +646,7 @@ p {
     margin-bottom: 1rem;
   }
 
+
   /* Daycare */
   .prices {
     width: 95%;
@@ -778,25 +779,15 @@ p {
 
   /* Videos */
   .video-content {
-    padding: 2rem 1rem;
-  }
+    padding: 0.5rem 1rem;
 
-  .video-section {
-    margin-top: 2rem;
-  }
-
-
-  /* Daycare */
-  .daycare-image {
-    .daycare-big-img {
-      display: flex;
-    }
-    .daycare-small-img {
-      display: none;
+    .video-section {
+      margin-top: 2rem;
     }
   }
-  
-    /* Training */
+
+
+  /* Training */
   .one-pic {
     display: none;
   }
@@ -817,6 +808,17 @@ p {
     }
   }
 
+  /* Daycare */
+  .daycare-image {
+    .daycare-big-img {
+      display: flex;
+    }
+
+    .daycare-small-img {
+      display: none;
+    }
+  }
+  
 
   /* About */
   .about-content {
@@ -857,7 +859,6 @@ p {
   .connect-map {
     width: 400px;
   }
-
 }
 
 
@@ -928,21 +929,21 @@ p {
 
 
   /* Videos */
-  .video-section {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 0.5rem;
-    margin-top: 2rem;
-    margin-bottom: 2rem;
-  }
+  .video-content {
+    .video-section {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 0.5rem;
+      margin: 1.5rem 0;
 
-  .youtube-video-container {
-    width: 100%;
-    height: 20%;
-    overflow: hidden;
-    padding-top: 56.25%;
+      .youtube-video-container {
+        width: 100%;
+        height: 20%;
+        overflow: hidden;
+        padding-top: 56.25%;
+      }
+    }
   }
-
 
   /* Training */
   .two-pics {
@@ -1018,25 +1019,6 @@ p {
   }
 
 
-  /* Training */
-  .three-pics {
-    padding: 2rem 3rem;
-    display: flex;
-    justify-content: space-between;
-
-    .training-dog {
-      width: 30%;
-  
-      .training-img img {
-        border-radius: 8px;
-        display: block;
-        margin: auto;
-      }
-    }
-  }
-
-
-
   /* About */
   .about-text {
     padding: 0.5rem 2rem;
@@ -1050,9 +1032,7 @@ p {
   }
 
 
-
   /* Connect */
-  
   .connect-details {
     display: flex;
     flex-direction: row;
@@ -1073,5 +1053,4 @@ p {
   .connect-map {
     height: 400px;
   }
-
 }
